Fixed images lining up down the page before masonry has a change to realign them

--- a/src/SymEdit/Bundle/CoreBundle/Resources/less/admin/admin.less
+++ b/src/SymEdit/Bundle/CoreBundle/Resources/less/admin/admin.less
@@ -291,6 +291,10 @@ i[class^="icon-"], i[class*=" icon-"] {
     }
 }
 
+.thumbnail-container {
+    padding: 0;
+}
+
 /**
  * Sidebar
  */
